機械手臂影片上傳

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -471,12 +471,20 @@ frameStops: {
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
-<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
-<h1 class="winkVideoControlBarProgressRightClass">機械手臂</h1>
-<br/><img alt="" height="1021" src="/images/零件圖.png" width="1920"/>機械手臂
+<h1>機械手臂</h1>
+<p><br/>機械手臂</p>
+<p><img alt="" height="800" src="/images/零件圖.png" width="1505"/></p>
+<p><br/>機械手臂</p>
+<p>零件下載:</p>
+<p><a href="https://drive.google.com/drive/folders/1HLpiB1flmo3h740gpI9yFCBtsMQaglMv?usp=sharing">https://drive.google.com/drive/folders/1HLpiB1flmo3h740gpI9yFCBtsMQaglMv?usp=sharing</a></p>
 <p>組裝過程:</p>
 <p><a href="https://youtu.be/1HYwdx2k0yM">https://youtu.be/1HYwdx2k0yM</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/1HYwdx2k0yM" width="800"></iframe></p>
+<p><strong>第一階段</strong></p>
+<p><strong></strong></p>
+<p><strong><img alt="" height="800" src="/images/手臂1.png" width="1505"/></strong></p>
+<p>第二階段</p>
+<p><strong><img alt="" height="800" src="/images/手臂2.png" width="1505"/></strong></p>
 <p><strong>coppeliasim wink</strong></p>
 <script>
 var winkVideoData = {
@@ -488,7 +496,7 @@ frameStops: {
 },
 };
 </script>
-<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="1200" width="800">
+<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="800" width="1200">
 <source src="./../downloads/12.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
@@ -499,8 +507,6 @@ frameStops: {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div>
-</div>
 </div><h1>Wink(W13)</h1>
 <p>先用wink錄製影片，將兩套程式的零件組繪圖進度紀錄進去</p>
 <p>再來用老師所提供的原始碼，並更改一下內容，將影片改成自己想要的名稱，上傳到倉儲上</p>
@@ -679,4 +685,4 @@ run()
 <script src="https://mde.tw/cp2021/cmsimde/static/gearUtils-09.js"></script>
 <script src="https://mde.tw/cp2021/cmsimde/static/SVGpathUtils-6v03-min.js"></script>
 <script src="https://mde.tw/cp2021/cmsimde/static/sylvester.js"></script>
-<script src="https://mde.tw/cp2021/cmsimde/static/PrairieDraw.js"></script></div></div></div></div>
+<script src="https://mde.tw/cp2021/cmsimde/static/PrairieDraw.js"></script></div></div></div></div></div></div>
