--- a/config/content.htm
+++ b/config/content.htm
@@ -471,13 +471,21 @@ frameStops: {
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
-<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 <h1>機械手臂</h1>
-<p><br/><img alt="" height="1021" src="/images/零件圖.png" width="1920"/>機械手臂</p>
+<p><br/>機械手臂</p>
+<p><img alt="" height="800" src="/images/零件圖.png" width="1505"/></p>
+<p><br/>機械手臂</p>
+<p>零件下載:</p>
+<p><a href="https://drive.google.com/drive/folders/1HLpiB1flmo3h740gpI9yFCBtsMQaglMv?usp=sharing">https://drive.google.com/drive/folders/1HLpiB1flmo3h740gpI9yFCBtsMQaglMv?usp=sharing</a></p>
 <p>組裝過程:</p>
 <p><a href="https://youtu.be/1HYwdx2k0yM">https://youtu.be/1HYwdx2k0yM</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/1HYwdx2k0yM" width="800"></iframe></p>
-<p><strong>coppeliasim wink</strong></p>
+<p><strong>第一階段</strong></p>
+<p><strong></strong></p>
+<p><strong><img alt="" height="800" src="/images/手臂1.png" width="1505"/></strong></p>
+<p>第二階段</p>
+<p><strong><img alt="" height="800" src="/images/手臂2.png" width="1505"/></strong></p>
+<p><strong>第三階段(coppeliasim wink)</strong></p>
 <script>
 var winkVideoData = {
 dataVersion: 1,
