更改圖片 WINK絕對位置

--- a/config/content.htm
+++ b/config/content.htm
@@ -473,7 +473,7 @@ frameStops: {
 <div class="winkVideoControlBarProgressLeftClass"></div>
 <h1>機械手臂</h1>
 <p><br/>機械手臂</p>
-<p><img alt="" height="800" src="/images/零件圖.png" width="1505"/></p>
+<p><img caption="false" height="800" src="https://40923226.github.io/cad2021_hw/images/%E9%9B%B6%E4%BB%B6%E5%9C%96.png" width="1505"/></p>
 <p><br/>機械手臂</p>
 <p>零件下載:</p>
 <p><a href="https://drive.google.com/drive/folders/1HLpiB1flmo3h740gpI9yFCBtsMQaglMv?usp=sharing">https://drive.google.com/drive/folders/1HLpiB1flmo3h740gpI9yFCBtsMQaglMv?usp=sharing</a></p>
@@ -488,7 +488,7 @@ frameStops: {
 };
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="800" width="1200">
-<source src="./../downloads/1.mp4" type="video/mp4"/></video>
+<source src="https://40923226.github.io/cad2021_hw/downloads/1.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
@@ -505,10 +505,10 @@ frameStops: {
 <p><strong>第一階段</strong></p>
 <p><strong><a href="https://drive.google.com/drive/folders/1HLpiB1flmo3h740gpI9yFCBtsMQaglMv?usp=sharing">https://drive.google.com/drive/folders/1HLpiB1flmo3h740gpI9yFCBtsMQaglMv?usp=sharing</a></strong></p>
 <p><strong></strong></p>
-<p><strong><img alt="" height="800" src="/images/手臂1.png" width="1505"/></strong></p>
+<p><strong><img caption="false" height="800" src="https://40923226.github.io/cad2021_hw/images/%E6%89%8B%E8%87%821.png" width="1505"/></strong></p>
 <p>第二階段</p>
 <p><a href="https://drive.google.com/drive/folders/1HLpiB1flmo3h740gpI9yFCBtsMQaglMv?usp=sharing">https://drive.google.com/drive/folders/1HLpiB1flmo3h740gpI9yFCBtsMQaglMv?usp=sharing</a></p>
-<p><strong><img alt="" height="800" src="/images/手臂2.png" width="1505"/></strong></p>
+<p><strong><img caption="false" height="800" src="https://40923226.github.io/cad2021_hw/images/%E6%89%8B%E8%87%822.png" width="1505"/></strong></p>
 <p><strong>第三階段(coppeliasim wink)</strong></p>
 <p><a href="https://drive.google.com/drive/folders/1txUGUJHpkwrQxjLGqYPc6otDbKxBeoGz?usp=sharing">https://drive.google.com/drive/folders/1txUGUJHpkwrQxjLGqYPc6otDbKxBeoGz?usp=sharing</a></p>
 <script>
@@ -522,7 +522,7 @@ frameStops: {
 };
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="800" width="1200">
-<source src="./../downloads/12.mp4" type="video/mp4"/></video>
+<source src="https://40923226.github.io/cad2021_hw/downloads/12.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass">
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
