--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -531,7 +531,7 @@ frameStops: {
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 <div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressRightClass">
-<div class="winkVideoControlBarProgressThumbClass">心得:</div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
@@ -539,7 +539,7 @@ frameStops: {
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
-<p>這次的課堂讓我學到非常多實用性的程式，最難的還是coppeliasim，從完全不會到慢慢熟悉，過程真得是非常煎熬，還有學習到如何運用wink錄影。這學期可說是受益良多，但要繼續溫故知新，否則知識是會離你而去的。</p><h1>Wink(W13)</h1>
+<p>心得: 這次的課堂讓我學到非常多實用性的程式，最難的還是coppeliasim，從完全不會到慢慢熟悉，過程真得是非常煎熬，還有學習到如何運用wink錄影。這學期可說是受益良多，但要繼續溫故知新，否則知識是會離你而去的。</p><h1>Wink(W13)</h1>
 <p>先用wink錄製影片，將兩套程式的零件組繪圖進度紀錄進去</p>
 <p>再來用老師所提供的原始碼，並更改一下內容，將影片改成自己想要的名稱，上傳到倉儲上</p>
 <p></p>
