更改影片 WINK 絕對位置

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -405,7 +405,7 @@ frameStops: {
 };
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="800" width="1200">
-<source src="./../downloads/1234.mp4" type="video/mp4"/></video>
+<source src="https://40923226.github.io/cad2021_hw/downloads/1234.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
@@ -440,14 +440,16 @@ frameStops: {
 };
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="800" width="1200">
-<source src="./../downloads/123.mp4" type="video/mp4"/></video>
+<source src="https://40923226.github.io/cad2021_hw/downloads/123.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 <div class="winkVideoControlBarProgressThumbClass"></div>
-<div class="winkVideoPlayOverlayClass"></div><h2>期末考延伸題</h2>
+<div class="winkVideoPlayOverlayClass"></div>
+</div>
+</div><h2>期末考延伸題</h2>
 <p>期末零件檔：<a href="https://drive.google.com/drive/folders/1JYKKdiOHVzTR8SJaAc1mNlDM9UagbAoz?usp=sharing">https://drive.google.com/drive/folders/1JYKKdiOHVzTR8SJaAc1mNlDM9UagbAoz?usp=sharing</a></p>
 <p>繪圖過程:</p>
 <p><a href="https://www.youtube.com/watch?v=gJJvBSnFo54">https://www.youtube.com/watch?v=gJJvBSnFo54</a></p>
@@ -467,13 +469,14 @@ frameStops: {
 };
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="800" width="1200">
-<source src="./../downloads/12345.mp4" type="video/mp4"/></video>
+<source src="https://40923226.github.io/cad2021_hw/downloads/12345.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
-<h1>機械手臂</h1>
+</div>
+</div><h1>機械手臂</h1>
 <p><br/>機械手臂</p>
-<p><img alt="" height="800" src="/images/零件圖.png" width="1505"/></p>
+<p><img caption="false" height="800" src="https://40923226.github.io/cad2021_hw/images/%E9%9B%B6%E4%BB%B6%E5%9C%96.png" width="1505"/></p>
 <p><br/>機械手臂</p>
 <p>零件下載:</p>
 <p><a href="https://drive.google.com/drive/folders/1HLpiB1flmo3h740gpI9yFCBtsMQaglMv?usp=sharing">https://drive.google.com/drive/folders/1HLpiB1flmo3h740gpI9yFCBtsMQaglMv?usp=sharing</a></p>
@@ -488,7 +491,7 @@ frameStops: {
 };
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="800" width="1200">
-<source src="./../downloads/1.mp4" type="video/mp4"/></video>
+<source src="https://40923226.github.io/cad2021_hw/downloads/1.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
@@ -505,10 +508,10 @@ frameStops: {
 <p><strong>第一階段</strong></p>
 <p><strong><a href="https://drive.google.com/drive/folders/1HLpiB1flmo3h740gpI9yFCBtsMQaglMv?usp=sharing">https://drive.google.com/drive/folders/1HLpiB1flmo3h740gpI9yFCBtsMQaglMv?usp=sharing</a></strong></p>
 <p><strong></strong></p>
-<p><strong><img alt="" height="800" src="/images/手臂1.png" width="1505"/></strong></p>
+<p><strong><img caption="false" height="800" src="https://40923226.github.io/cad2021_hw/images/%E6%89%8B%E8%87%821.png" width="1505"/></strong></p>
 <p>第二階段</p>
 <p><a href="https://drive.google.com/drive/folders/1HLpiB1flmo3h740gpI9yFCBtsMQaglMv?usp=sharing">https://drive.google.com/drive/folders/1HLpiB1flmo3h740gpI9yFCBtsMQaglMv?usp=sharing</a></p>
-<p><strong><img alt="" height="800" src="/images/手臂2.png" width="1505"/></strong></p>
+<p><strong><img caption="false" height="800" src="https://40923226.github.io/cad2021_hw/images/%E6%89%8B%E8%87%822.png" width="1505"/></strong></p>
 <p><strong>第三階段(coppeliasim wink)</strong></p>
 <p><a href="https://drive.google.com/drive/folders/1txUGUJHpkwrQxjLGqYPc6otDbKxBeoGz?usp=sharing">https://drive.google.com/drive/folders/1txUGUJHpkwrQxjLGqYPc6otDbKxBeoGz?usp=sharing</a></p>
 <script>
@@ -522,7 +525,7 @@ frameStops: {
 };
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="800" width="1200">
-<source src="./../downloads/12.mp4" type="video/mp4"/></video>
+<source src="https://40923226.github.io/cad2021_hw/downloads/12.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass">
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
@@ -717,4 +720,4 @@ run()
 <script src="https://mde.tw/cp2021/cmsimde/static/gearUtils-09.js"></script>
 <script src="https://mde.tw/cp2021/cmsimde/static/SVGpathUtils-6v03-min.js"></script>
 <script src="https://mde.tw/cp2021/cmsimde/static/sylvester.js"></script>
-<script src="https://mde.tw/cp2021/cmsimde/static/PrairieDraw.js"></script></div></div></div></div></div></div>
+<script src="https://mde.tw/cp2021/cmsimde/static/PrairieDraw.js"></script></div></div>
