--- a/content/期末考.html
+++ b/content/期末考.html
@@ -164,14 +164,16 @@ frameStops: {
 };
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="800" width="1200">
-<source src="./../downloads/123.mp4" type="video/mp4"/></video>
+<source src="https://40923226.github.io/cad2021_hw/downloads/123.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 <div class="winkVideoControlBarProgressThumbClass"></div>
-<div class="winkVideoPlayOverlayClass"></div><br />W11(查驗) << <a href='W11(查驗).html'>Previous</a> <a href='期末考延伸題.html'>Next</a> >> 期末考延伸題</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div>
+</div><br />W11(查驗) << <a href='W11(查驗).html'>Previous</a> <a href='期末考延伸題.html'>Next</a> >> 期末考延伸題</div>
         
     <!-- footer -->
       <div class="container">
