--- a/content/期末考延伸題.html
+++ b/content/期末考延伸題.html
@@ -159,11 +159,12 @@ frameStops: {
 };
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="800" width="1200">
-<source src="./../downloads/12345.mp4" type="video/mp4"/></video>
+<source src="https://40923226.github.io/cad2021_hw/downloads/12345.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
-<br />期末考 << <a href='期末考.html'>Previous</a> <a href='機械手臂.html'>Next</a> >> 機械手臂</div>
+</div>
+</div><br />期末考 << <a href='期末考.html'>Previous</a> <a href='機械手臂.html'>Next</a> >> 機械手臂</div>
         
     <!-- footer -->
       <div class="container">
