--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -378,7 +378,8 @@ end</pre>
 <p style="padding-left: 30px;">CAD2 零件轉入 CoppeliaSim 教學影片 (Wink)</p>
 <p style="padding-left: 30px;">CAD2 轉入 Coppeliasim 教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零件轉入 CoppeliaSim 教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.</span></p>
 <p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
-<h1>W11(查驗)</h1>
+<h1>期末統整</h1>
+<h2>W11(查驗)</h2>
 <p>零件尺寸圖(auto CAD):</p>
 <p><a href="https://drive.google.com/drive/folders/1tTAwIHiRr_Y-cCoNJJCFGArpYdtIHxnq?usp=sharing">https://drive.google.com/drive/folders/1tTAwIHiRr_Y-cCoNJJCFGArpYdtIHxnq?usp=sharing</a></p>
 <p>3D零件檔案(onshape):</p>
@@ -415,7 +416,7 @@ frameStops: {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><h1>期末考</h1>
+</div><h2>期末考</h2>
 <p>心得:</p>
 <p>  這學期碰觸到了些新的繪圖程式，而我被分配到的是onshape還有inventor，簡單的繪圖就像下面影片所做，onshape的話可直接畫在同一個圖檔接下來直接在裡面組裝即可。inventor的話，需新創一個組合件，再把要用零件全部匯入即可組裝。</p>
 <p>  接下來思考各軸與各軸的運動關係，然後想辦法讓他做動，還有直線運動、旋轉運動等等，onshape我是用圓柱結合和平面結合所去組成，inventor則是用約束裡面的貼合和插入去組，過程非常困難，但是組起來可以說很有成就感。</p>
@@ -474,7 +475,7 @@ frameStops: {
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
 </div>
-</div><h1>機械手臂</h1>
+</div><h2>機械手臂</h2>
 <p><br/>機械手臂</p>
 <p><img caption="false" height="800" src="https://40923226.github.io/cad2021_hw/images/%E9%9B%B6%E4%BB%B6%E5%9C%96.png" width="1505"/></p>
 <p><br/>機械手臂</p>
@@ -561,7 +562,8 @@ frameStops: {
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
-<h2>W13-1</h2>
+</div>
+</div><h2>W13-1</h2>
 <p dir="auto">請建立一個 Wink 檔案, 將 1. 已經完成的 meArm 機械手臂第一軸, 加入<span> </span><a href="https://www.coppeliarobotics.com/helpFiles/en/simUI-widgets.htm" rel="nofollow">https://www.coppeliarobotics.com/helpFiles/en/simUI-widgets.htm</a><span> </span>slider, 可以在執行時, 利用滑鼠拖動旋轉 360 度 (30%).</p>
 <div class="winkVideoPlayOverlayClass"></div>
 <script>
@@ -575,7 +577,7 @@ frameStops: {
 };
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="800" width="1200">
-<source src="./../downloads/40923226.mp4" type="video/mp4"/></video>
+<source src="https://40923226.github.io/cad2021_hw/downloads/40923226.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
@@ -720,4 +722,4 @@ run()
 <script src="https://mde.tw/cp2021/cmsimde/static/gearUtils-09.js"></script>
 <script src="https://mde.tw/cp2021/cmsimde/static/SVGpathUtils-6v03-min.js"></script>
 <script src="https://mde.tw/cp2021/cmsimde/static/sylvester.js"></script>
-<script src="https://mde.tw/cp2021/cmsimde/static/PrairieDraw.js"></script></div></div>
+<script src="https://mde.tw/cp2021/cmsimde/static/PrairieDraw.js"></script>
