--- a/content/期末統整.html
+++ b/content/期末統整.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad2021 homework site</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='歡迎來到我的網站!!.html'>歡迎來到我的網站!!</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpages.html'>hwpages</a><li><a href='githubpage.html'>githubpage</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='INVENTOR 繪圖.html'>INVENTOR 繪圖</a><ul class='dropdown'><li><a href='Inventor 安裝配置.html'>Inventor 安裝配置</a><li><a href='Inventor 操作流程.html'>Inventor 操作流程</a></li></ul><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='onshape安裝配置.html'>onshape安裝配置</a><li><a href='Onshape 操作流程.html'>Onshape 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='W11(查驗).html'>W11(查驗)</a><li class='has-children'><a href='期末考.html'>期末考</a><ul class='dropdown'><li><a href='期末考延伸題.html'>期末考延伸題</a></li></ul><li><a href='機械手臂.html'>機械手臂</a><li class='has-children'><a href='Wink(W13).html'>Wink(W13)</a><ul class='dropdown'><li><a href='W13-1.html'>W13-1</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a><li><a href='Run.html'>Run</a></li>
+                     <li><a href='歡迎來到我的網站!!.html'>歡迎來到我的網站!!</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpages.html'>hwpages</a><li><a href='githubpage.html'>githubpage</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='INVENTOR 繪圖.html'>INVENTOR 繪圖</a><ul class='dropdown'><li><a href='Inventor 安裝配置.html'>Inventor 安裝配置</a><li><a href='Inventor 操作流程.html'>Inventor 操作流程</a></li></ul><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='onshape安裝配置.html'>onshape安裝配置</a><li><a href='Onshape 操作流程.html'>Onshape 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='期末統整.html'>期末統整</a><li class='has-children'><a href='Wink(W13).html'>Wink(W13)</a><ul class='dropdown'><li><a href='W13-1.html'>W13-1</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a><li><a href='Run.html'>Run</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,81 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">期末考 << <a href='期末考.html'>Previous</a> <a href='機械手臂.html'>Next</a> >> 機械手臂<br /><h1>期末考延伸題</h1>
+    <div id="tipue_search_content">運動場景 << <a href='運動場景.html'>Previous</a> <a href='Wink(W13).html'>Next</a> >> Wink(W13)<br /><h1>期末統整</h1>
+<p>W11(查驗)</p>
+<p>零件尺寸圖(auto CAD):</p>
+<p><a href="https://drive.google.com/drive/folders/1tTAwIHiRr_Y-cCoNJJCFGArpYdtIHxnq?usp=sharing">https://drive.google.com/drive/folders/1tTAwIHiRr_Y-cCoNJJCFGArpYdtIHxnq?usp=sharing</a></p>
+<p>3D零件檔案(onshape):</p>
+<p><a href="https://drive.google.com/drive/folders/1UMRjqft1-kyaHtjBy0bJvjCNng9j8U2l?usp=sharing">https://drive.google.com/drive/folders/1UMRjqft1-kyaHtjBy0bJvjCNng9j8U2l?usp=sharing</a></p>
+<p></p>
+<p>影片:</p>
+<p><a href="https://www.youtube.com/watch?v=WcgBfZCOkEQ">https://www.youtube.com/watch?v=WcgBfZCOkEQ</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/WcgBfZCOkEQ" width="800"></iframe></p>
+<p><a href="https://youtu.be/_J8cbSAUAD8">https://youtu.be/_J8cbSAUAD8</a>(轉動影片)</p>
+<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/_J8cbSAUAD8" width="800"></iframe></p>
+<p>(因為要看清楚有插銷，所以影片裡故意讓它突出一塊)</p>
+<p></p>
+<p><strong>coppeliasim wink</strong></p>
+<p></p>
+<p></p>
+<script>
+var winkVideoData = {
+dataVersion: 1,
+frameRate: 20,
+buttonFrameLength: 10,
+buttonFrameOffset: 5,
+frameStops: {
+},
+};
+</script>
+<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="800" width="1200">
+<source src="https://40923226.github.io/cad2021_hw/downloads/1234.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div>
+<p>期末考</p>
+<p>心得:</p>
+<p>  這學期碰觸到了些新的繪圖程式，而我被分配到的是onshape還有inventor，簡單的繪圖就像下面影片所做，onshape的話可直接畫在同一個圖檔接下來直接在裡面組裝即可。inventor的話，需新創一個組合件，再把要用零件全部匯入即可組裝。</p>
+<p>  接下來思考各軸與各軸的運動關係，然後想辦法讓他做動，還有直線運動、旋轉運動等等，onshape我是用圓柱結合和平面結合所去組成，inventor則是用約束裡面的貼合和插入去組，過程非常困難，但是組起來可以說很有成就感。</p>
+<p>  還有重點就是在coppeliasim裡都是英文，是平常幾乎看不到的單字讓我非常頭痛，不過這也讓我花時間去翻譯去學習。過程中，需插入軸，並將它定位，定位完後合併零件，再更改程式就差不多了。</p>
+<p>零件檔:<a href="https://drive.google.com/drive/folders/1JYKKdiOHVzTR8SJaAc1mNlDM9UagbAoz?usp=sharing">https://drive.google.com/drive/folders/1JYKKdiOHVzTR8SJaAc1mNlDM9UagbAoz?usp=sharing</a></p>
+<p></p>
+<p>繪圖過程:<a href="https://www.youtube.com/watch?v=gJJvBSnFo54">https://www.youtube.com/watch?v=gJJvBSnFo54</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/gJJvBSnFo54" width="800"></iframe></p>
+<p></p>
+<p>組裝影片:<a href="https://www.youtube.com/watch?v=tq-kHz-yLA8">https://www.youtube.com/watch?v=tq-kHz-yLA8</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/tq-kHz-yLA8" width="800"></iframe></p>
+<p></p>
+<p>---------------</p>
+<script>
+var winkVideoData = {
+dataVersion: 1,
+frameRate: 20,
+buttonFrameLength: 10,
+buttonFrameOffset: 5,
+frameStops: {
+},
+};
+</script>
+<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="800" width="1200">
+<source src="https://40923226.github.io/cad2021_hw/downloads/123.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div>
+</div>
+<p>期末考延伸題</p>
 <p>期末零件檔：<a href="https://drive.google.com/drive/folders/1JYKKdiOHVzTR8SJaAc1mNlDM9UagbAoz?usp=sharing">https://drive.google.com/drive/folders/1JYKKdiOHVzTR8SJaAc1mNlDM9UagbAoz?usp=sharing</a></p>
 <p>繪圖過程:</p>
 <p><a href="https://www.youtube.com/watch?v=gJJvBSnFo54">https://www.youtube.com/watch?v=gJJvBSnFo54</a></p>
@@ -164,7 +238,77 @@ frameStops: {
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
 </div>
-</div><br />期末考 << <a href='期末考.html'>Previous</a> <a href='機械手臂.html'>Next</a> >> 機械手臂</div>
+</div>
+<p>機械手臂</p>
+<p><br/>機械手臂</p>
+<p><img caption="false" height="800" src="https://40923226.github.io/cad2021_hw/images/%E9%9B%B6%E4%BB%B6%E5%9C%96.png" width="1505"/></p>
+<p><br/>機械手臂</p>
+<p>零件下載:</p>
+<p><a href="https://drive.google.com/drive/folders/1HLpiB1flmo3h740gpI9yFCBtsMQaglMv?usp=sharing">https://drive.google.com/drive/folders/1HLpiB1flmo3h740gpI9yFCBtsMQaglMv?usp=sharing</a></p>
+<script>
+var winkVideoData = {
+dataVersion: 1,
+frameRate: 20,
+buttonFrameLength: 10,
+buttonFrameOffset: 5,
+frameStops: {
+},
+};
+</script>
+<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="800" width="1200">
+<source src="https://40923226.github.io/cad2021_hw/downloads/1.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div>
+<p>組裝過程:</p>
+<p><a href="https://youtu.be/1HYwdx2k0yM">https://youtu.be/1HYwdx2k0yM</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/1HYwdx2k0yM" width="800"></iframe></p>
+<p><strong>第一階段</strong></p>
+<p><strong><a href="https://drive.google.com/drive/folders/1HLpiB1flmo3h740gpI9yFCBtsMQaglMv?usp=sharing">https://drive.google.com/drive/folders/1HLpiB1flmo3h740gpI9yFCBtsMQaglMv?usp=sharing</a></strong></p>
+<p><strong></strong></p>
+<p><strong><img caption="false" height="800" src="https://40923226.github.io/cad2021_hw/images/%E6%89%8B%E8%87%821.png" width="1505"/></strong></p>
+<p>第二階段</p>
+<p><a href="https://drive.google.com/drive/folders/1HLpiB1flmo3h740gpI9yFCBtsMQaglMv?usp=sharing">https://drive.google.com/drive/folders/1HLpiB1flmo3h740gpI9yFCBtsMQaglMv?usp=sharing</a></p>
+<p><strong><img caption="false" height="800" src="https://40923226.github.io/cad2021_hw/images/%E6%89%8B%E8%87%822.png" width="1505"/></strong></p>
+<p><strong>第三階段(coppeliasim wink)</strong></p>
+<p><a href="https://drive.google.com/drive/folders/1txUGUJHpkwrQxjLGqYPc6otDbKxBeoGz?usp=sharing">https://drive.google.com/drive/folders/1txUGUJHpkwrQxjLGqYPc6otDbKxBeoGz?usp=sharing</a></p>
+<script>
+var winkVideoData = {
+dataVersion: 1,
+frameRate: 20,
+buttonFrameLength: 10,
+buttonFrameOffset: 5,
+frameStops: {
+},
+};
+</script>
+<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="800" width="1200">
+<source src="https://40923226.github.io/cad2021_hw/downloads/12.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass">
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressRightClass">
+<div class="winkVideoControlBarProgressThumbClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div>
+<p>心得: 這次的課堂讓我學到非常多實用性的程式，最難的還是coppeliasim，從完全不會到慢慢熟悉，過程真得是非常煎熬，還有學習到如何運用wink錄影。這學期可說是受益良多，但要繼續溫故知新，否則知識是會離你而去的。</p>
+<br />運動場景 << <a href='運動場景.html'>Previous</a> <a href='Wink(W13).html'>Next</a> >> Wink(W13)</div>
         
     <!-- footer -->
       <div class="container">
