--- a/config/content.htm
+++ b/config/content.htm
@@ -348,7 +348,8 @@ end</pre>
 <p></p>
 <p>目前進度(50%):已經將所有老師分發下來的零件，經由autocad重新畫過一遍，並且將它以Inventor繪畫成3D的零件，目前只差把零件組裝起來，但是因為高中沒學過，所以還在詢問同學該如何製作</p>
 <p>目前進度(70%):已經將零件組裝過一次，現在只差重新來過，並且錄製成影片，就大功告成了</p>
-<p></p><h2>Onshape 繪圖</h2>
+<p></p>
+<h2>Onshape 繪圖</h2>
 <p><span>Onshape 不僅支持跨設備分享設計，而且還可協作編輯，這一切都是在瀏覽器上實時進行的。其秘密在於採用了混合方案来計算產品的曲面和運動。除了利用用户設備的處理器能力以外，Onshape 還结合了會基礎設施的能力来對設計進行複雜的渲染，有了強大的计算能力支撑，用戶設備的能力就不是问题了。比方说用戶在本地修改了設計的斜角后，設備馬上會將修改同步到雲端，再由後台計算出新的幾何體，整個過程幾乎沒有延遲。</span></p>
 <p><strong></strong></p>
 <p><span>Onshape</span> 緣起說明與介紹</p>
@@ -362,13 +363,15 @@ end</pre>
 <p>CAD2 套件下載安裝與配置影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>套件下載安裝與配置影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
 <p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
 <p></p>
-<p>Onshape 使用方法: <a href="https://www.youtube.com/watch?v=6tAS4hV2ETI">https://www.youtube.com/watch?v=6tAS4hV2ETI</a></p><h3>Onshape 操作流程</h3>
+<p>Onshape 使用方法: <a href="https://www.youtube.com/watch?v=6tAS4hV2ETI">https://www.youtube.com/watch?v=6tAS4hV2ETI</a></p>
+<h3>Onshape 操作流程</h3>
 <p>零組件繪圖教學影片 (照以上影片操作):個零件都先以CAD先描繪過一次，再轉成DXF檔，再以Onshape打開圖檔，並且長料，就完成了此零件。</p>
 <p>  如果遇到零件無法長料，就代表此圖並沒有封閉，可一個一個部分檢查，但會消耗較多時間，或者也可以直接在上面多描一次</p>
 <p>CAD2 零組件繪圖操作流程影片 (Youtube)</p>
 <p>CAD2 零組件繪圖教學影片 (Wink)</p>
 <p>CAD2 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
-<p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p><h2>運動場景</h2>
+<p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
+<h2>運動場景</h2>
 <h4>CAD1:</h4>
 <p style="padding-left: 30px;">CAD1 零件轉出後轉入 CoppeliaSim 操作影片 (Youtube)</p>
 <p style="padding-left: 30px;">CAD1 零件轉入 CoppeliaSim 教學影片 (Wink)</p>
@@ -378,7 +381,8 @@ end</pre>
 <p style="padding-left: 30px;">CAD2 零件轉入 CoppeliaSim 教學影片 (Wink)</p>
 <p style="padding-left: 30px;">CAD2 轉入 Coppeliasim 教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零件轉入 CoppeliaSim 教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.</span></p>
 <p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
-<h1>W11(查驗)</h1>
+<h1>期末統整</h1>
+<p>W11(查驗)</p>
 <p>零件尺寸圖(auto CAD):</p>
 <p><a href="https://drive.google.com/drive/folders/1tTAwIHiRr_Y-cCoNJJCFGArpYdtIHxnq?usp=sharing">https://drive.google.com/drive/folders/1tTAwIHiRr_Y-cCoNJJCFGArpYdtIHxnq?usp=sharing</a></p>
 <p>3D零件檔案(onshape):</p>
@@ -415,7 +419,8 @@ frameStops: {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><h1>期末考</h1>
+</div>
+<p>期末考</p>
 <p>心得:</p>
 <p>  這學期碰觸到了些新的繪圖程式，而我被分配到的是onshape還有inventor，簡單的繪圖就像下面影片所做，onshape的話可直接畫在同一個圖檔接下來直接在裡面組裝即可。inventor的話，需新創一個組合件，再把要用零件全部匯入即可組裝。</p>
 <p>  接下來思考各軸與各軸的運動關係，然後想辦法讓他做動，還有直線運動、旋轉運動等等，onshape我是用圓柱結合和平面結合所去組成，inventor則是用約束裡面的貼合和插入去組，過程非常困難，但是組起來可以說很有成就感。</p>
@@ -449,7 +454,8 @@ frameStops: {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
-</div><h2>期末考延伸題</h2>
+</div>
+<p>期末考延伸題</p>
 <p>期末零件檔：<a href="https://drive.google.com/drive/folders/1JYKKdiOHVzTR8SJaAc1mNlDM9UagbAoz?usp=sharing">https://drive.google.com/drive/folders/1JYKKdiOHVzTR8SJaAc1mNlDM9UagbAoz?usp=sharing</a></p>
 <p>繪圖過程:</p>
 <p><a href="https://www.youtube.com/watch?v=gJJvBSnFo54">https://www.youtube.com/watch?v=gJJvBSnFo54</a></p>
@@ -474,7 +480,8 @@ frameStops: {
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
 </div>
-</div><h1>機械手臂</h1>
+</div>
+<p>機械手臂</p>
 <p><br/>機械手臂</p>
 <p><img caption="false" height="800" src="https://40923226.github.io/cad2021_hw/images/%E9%9B%B6%E4%BB%B6%E5%9C%96.png" width="1505"/></p>
 <p><br/>機械手臂</p>
@@ -542,7 +549,8 @@ frameStops: {
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
-<p>心得: 這次的課堂讓我學到非常多實用性的程式，最難的還是coppeliasim，從完全不會到慢慢熟悉，過程真得是非常煎熬，還有學習到如何運用wink錄影。這學期可說是受益良多，但要繼續溫故知新，否則知識是會離你而去的。</p><h1>Wink(W13)</h1>
+<p>心得: 這次的課堂讓我學到非常多實用性的程式，最難的還是coppeliasim，從完全不會到慢慢熟悉，過程真得是非常煎熬，還有學習到如何運用wink錄影。這學期可說是受益良多，但要繼續溫故知新，否則知識是會離你而去的。</p>
+<h1>Wink(W13)</h1>
 <p>先用wink錄製影片，將兩套程式的零件組繪圖進度紀錄進去</p>
 <p>再來用老師所提供的原始碼，並更改一下內容，將影片改成自己想要的名稱，上傳到倉儲上</p>
 <p></p>
@@ -561,6 +569,8 @@ frameStops: {
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
+</div>
+</div>
 <h2>W13-1</h2>
 <p dir="auto">請建立一個 Wink 檔案, 將 1. 已經完成的 meArm 機械手臂第一軸, 加入<span> </span><a href="https://www.coppeliarobotics.com/helpFiles/en/simUI-widgets.htm" rel="nofollow">https://www.coppeliarobotics.com/helpFiles/en/simUI-widgets.htm</a><span> </span>slider, 可以在執行時, 利用滑鼠拖動旋轉 360 度 (30%).</p>
 <div class="winkVideoPlayOverlayClass"></div>
@@ -585,7 +595,8 @@ frameStops: {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><h1>HW1-1</h1>
+</div>
+<h1>HW1-1</h1>
 <p>HW1-1 佔學期成績 15%</p>
 <p><span style="background-color: #ffff99;">HW1-1 必須在 2021.12.01 22:00 之前完成.<br/></span></p>
 <p><a href="https://github.com/mdecourse/cad2021/discussions/6">HW1-1 具體項目成果回報區</a>將於 2021.11.18 開啟, 於 <span style="background-color: #ff99cc;">2021.12.01 22:00 關閉.</span></p>
@@ -720,4 +731,4 @@ run()
 <script src="https://mde.tw/cp2021/cmsimde/static/gearUtils-09.js"></script>
 <script src="https://mde.tw/cp2021/cmsimde/static/SVGpathUtils-6v03-min.js"></script>
 <script src="https://mde.tw/cp2021/cmsimde/static/sylvester.js"></script>
-<script src="https://mde.tw/cp2021/cmsimde/static/PrairieDraw.js"></script></div></div>
+<script src="https://mde.tw/cp2021/cmsimde/static/PrairieDraw.js"></script>
