--- a/content/onshape安裝配置.html
+++ b/content/onshape安裝配置.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='歡迎來到我的網站!!.html'>歡迎來到我的網站!!</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpages.html'>hwpages</a><li><a href='githubpage.html'>githubpage</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='INVENTOR 繪圖.html'>INVENTOR 繪圖</a><ul class='dropdown'><li><a href='Inventor 安裝配置.html'>Inventor 安裝配置</a><li><a href='Inventor 操作流程.html'>Inventor 操作流程</a></li></ul><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='onshape安裝配置.html'>onshape安裝配置</a><li><a href='Onshape 操作流程.html'>Onshape 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='W11(查驗).html'>W11(查驗)</a><li class='has-children'><a href='期末考.html'>期末考</a><ul class='dropdown'><li><a href='期末考延伸題.html'>期末考延伸題</a></li></ul><li><a href='機械手臂.html'>機械手臂</a><li class='has-children'><a href='Wink(W13).html'>Wink(W13)</a><ul class='dropdown'><li><a href='W13-1.html'>W13-1</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a><li><a href='Run.html'>Run</a></li>
+                     <li><a href='歡迎來到我的網站!!.html'>歡迎來到我的網站!!</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpages.html'>hwpages</a><li><a href='githubpage.html'>githubpage</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='INVENTOR 繪圖.html'>INVENTOR 繪圖</a><ul class='dropdown'><li><a href='Inventor 安裝配置.html'>Inventor 安裝配置</a><li><a href='Inventor 操作流程.html'>Inventor 操作流程</a></li></ul><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='onshape安裝配置.html'>onshape安裝配置</a><li><a href='Onshape 操作流程.html'>Onshape 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='期末統整.html'>期末統整</a><li class='has-children'><a href='Wink(W13).html'>Wink(W13)</a><ul class='dropdown'><li><a href='W13-1.html'>W13-1</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a><li><a href='Run.html'>Run</a></li>
                       </ul>
                 </nav>
               </div>
@@ -145,7 +145,8 @@ img.add_border {
 <p>CAD2 套件下載安裝與配置影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>套件下載安裝與配置影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
 <p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
 <p></p>
-<p>Onshape 使用方法: <a href="https://www.youtube.com/watch?v=6tAS4hV2ETI">https://www.youtube.com/watch?v=6tAS4hV2ETI</a></p><br />Onshape 繪圖 << <a href='Onshape 繪圖.html'>Previous</a> <a href='Onshape 操作流程.html'>Next</a> >> Onshape 操作流程</div>
+<p>Onshape 使用方法: <a href="https://www.youtube.com/watch?v=6tAS4hV2ETI">https://www.youtube.com/watch?v=6tAS4hV2ETI</a></p>
+<br />Onshape 繪圖 << <a href='Onshape 繪圖.html'>Previous</a> <a href='Onshape 操作流程.html'>Next</a> >> Onshape 操作流程</div>
         
     <!-- footer -->
       <div class="container">
