--- a/config/content.htm
+++ b/config/content.htm
@@ -381,7 +381,7 @@ end</pre>
 <p style="padding-left: 30px;">CAD2 零件轉入 CoppeliaSim 教學影片 (Wink)</p>
 <p style="padding-left: 30px;">CAD2 轉入 Coppeliasim 教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零件轉入 CoppeliaSim 教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.</span></p>
 <p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
-<h1>期末統整</h1>
+<h1>期末考試</h1>
 <p>W11(查驗)</p>
 <p>零件尺寸圖(auto CAD):</p>
 <p><a href="https://drive.google.com/drive/folders/1tTAwIHiRr_Y-cCoNJJCFGArpYdtIHxnq?usp=sharing">https://drive.google.com/drive/folders/1tTAwIHiRr_Y-cCoNJJCFGArpYdtIHxnq?usp=sharing</a></p>
@@ -549,8 +549,7 @@ frameStops: {
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
-<p>心得: 這次的課堂讓我學到非常多實用性的程式，最難的還是coppeliasim，從完全不會到慢慢熟悉，過程真得是非常煎熬，還有學習到如何運用wink錄影。這學期可說是受益良多，但要繼續溫故知新，否則知識是會離你而去的。</p>
-<h1>Wink(W13)</h1>
+<p>心得: 這次的課堂讓我學到非常多實用性的程式，最難的還是coppeliasim，從完全不會到慢慢熟悉，過程真得是非常煎熬，還有學習到如何運用wink錄影。這學期可說是受益良多，但要繼續溫故知新，否則知識是會離你而去的。</p><h1>Wink(W13)</h1>
 <p>先用wink錄製影片，將兩套程式的零件組繪圖進度紀錄進去</p>
 <p>再來用老師所提供的原始碼，並更改一下內容，將影片改成自己想要的名稱，上傳到倉儲上</p>
 <p></p>
