--- a/content/期末考試.html
+++ b/content/期末考試.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='歡迎來到我的網站!!.html'>歡迎來到我的網站!!</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpages.html'>hwpages</a><li><a href='githubpage.html'>githubpage</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='INVENTOR 繪圖.html'>INVENTOR 繪圖</a><ul class='dropdown'><li><a href='Inventor 安裝配置.html'>Inventor 安裝配置</a><li><a href='Inventor 操作流程.html'>Inventor 操作流程</a></li></ul><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='onshape安裝配置.html'>onshape安裝配置</a><li><a href='Onshape 操作流程.html'>Onshape 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='期末統整.html'>期末統整</a><li class='has-children'><a href='Wink(W13).html'>Wink(W13)</a><ul class='dropdown'><li><a href='W13-1.html'>W13-1</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a><li><a href='Run.html'>Run</a></li>
+                     <li><a href='歡迎來到我的網站!!.html'>歡迎來到我的網站!!</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpages.html'>hwpages</a><li><a href='githubpage.html'>githubpage</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='INVENTOR 繪圖.html'>INVENTOR 繪圖</a><ul class='dropdown'><li><a href='Inventor 安裝配置.html'>Inventor 安裝配置</a><li><a href='Inventor 操作流程.html'>Inventor 操作流程</a></li></ul><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='onshape安裝配置.html'>onshape安裝配置</a><li><a href='Onshape 操作流程.html'>Onshape 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='期末考試.html'>期末考試</a><li class='has-children'><a href='Wink(W13).html'>Wink(W13)</a><ul class='dropdown'><li><a href='W13-1.html'>W13-1</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a><li><a href='Run.html'>Run</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">運動場景 << <a href='運動場景.html'>Previous</a> <a href='Wink(W13).html'>Next</a> >> Wink(W13)<br /><h1>期末統整</h1>
+    <div id="tipue_search_content">運動場景 << <a href='運動場景.html'>Previous</a> <a href='Wink(W13).html'>Next</a> >> Wink(W13)<br /><h1>期末考試</h1>
 <p>W11(查驗)</p>
 <p>零件尺寸圖(auto CAD):</p>
 <p><a href="https://drive.google.com/drive/folders/1tTAwIHiRr_Y-cCoNJJCFGArpYdtIHxnq?usp=sharing">https://drive.google.com/drive/folders/1tTAwIHiRr_Y-cCoNJJCFGArpYdtIHxnq?usp=sharing</a></p>
@@ -307,8 +307,7 @@ frameStops: {
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
-<p>心得: 這次的課堂讓我學到非常多實用性的程式，最難的還是coppeliasim，從完全不會到慢慢熟悉，過程真得是非常煎熬，還有學習到如何運用wink錄影。這學期可說是受益良多，但要繼續溫故知新，否則知識是會離你而去的。</p>
-<br />運動場景 << <a href='運動場景.html'>Previous</a> <a href='Wink(W13).html'>Next</a> >> Wink(W13)</div>
+<p>心得: 這次的課堂讓我學到非常多實用性的程式，最難的還是coppeliasim，從完全不會到慢慢熟悉，過程真得是非常煎熬，還有學習到如何運用wink錄影。這學期可說是受益良多，但要繼續溫故知新，否則知識是會離你而去的。</p><br />運動場景 << <a href='運動場景.html'>Previous</a> <a href='Wink(W13).html'>Next</a> >> Wink(W13)</div>
         
     <!-- footer -->
       <div class="container">
